[+] support milk&more website [!] fix manifest description being too long [+] support new sainsburys favourites layout

--- a/css/ethics.css
+++ b/css/ethics.css
@@ -165,3 +165,14 @@
 .es-boots-search-result {
     font-size: x-small;
 }
+
+/***************************** milkandmore *******************************/
+[class^="es-mam-"] {
+    display: block !important;
+    position: relative !important;
+    text-align: center !important;
+}
+
+.es-mam-search-result {
+    font-size: x-small;
+}
